Fix scrollbar

--- a/client/src/assets/themes/pages/dark/general.scss
+++ b/client/src/assets/themes/pages/dark/general.scss
@@ -4,21 +4,29 @@
     background-color: $background;
     color: $text-color;
 
-    * {
-        scrollbar-width: thin;
-        scrollbar-color: $primary $lines;
-    }
+    //* {
+    //    scrollbar-width: thin;
+    //    scrollbar-color: $primary $lines;
+    //}
 
-    *::-webkit-scrollbar-track,
-    html *::-webkit-scrollbar-track {
-        background: $lines;
+    *::-webkit-scrollbar-track {
         margin: 20px;
     }
-    *::-webkit-scrollbar-thumb,
-    html *::-webkit-scrollbar-thumb {
+    *::-webkit-scrollbar-thumb {
         background-color: $primary;
-        border: 0px solid $lines;
     }
+
+
+    //*::-webkit-scrollbar-track,
+    //html *::-webkit-scrollbar-track {
+    //    background: $lines;
+    //    margin: 20px;
+    //}
+    //*::-webkit-scrollbar-thumb,
+    //html *::-webkit-scrollbar-thumb {
+    //    background-color: $primary;
+    //    border: 0 solid $lines;
+    //}
 
     .font {
         &-thin {
